--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible"content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Protest+Strike&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>AFS.GG</title>
     <script src="script.js"></script>
@@ -30,7 +33,7 @@
         </tr>
         <tr>
             <td>
-                <img src="img/liampic.PNG" alt="WOMP WOMP" width="100" height="100">
+                <img src="img/liam.PNG" alt="WOMP WOMP" width="100" height="100">
             </td>
             <td>
                 <div id="summonRank_data_urdle2"></div>
@@ -39,7 +42,7 @@
         </tr>
         <tr>
             <td>
-                <img src="img/liampic.PNG" alt="WOMP WOMP" width="100" height="100">
+                <img src="img/ania.PNG" alt="WOMP WOMP" width="100" height="100">
             </td>
             <td>
                 <div id="summonRank_data_Lucyiel382"></div>
