--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <table>
         <tr>
             <td>
-                <img src="img/liampic.PNG" alt="WOMP WOMP" width="100" height="100">
+                <img src="img/jonahpic.PNG" alt="WOMP WOMP" width="100" height="100">
             </td>
             <td>
                 <div id="summonRank_data_Snowsayshi"></div>
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td>
-                <img src="img/liampic.PNG" alt="WOMP WOMP" width="100" height="100">
+                <img src="img/marcopic.PNG" alt="WOMP WOMP" width="100" height="100">
             </td>
             <td>
                 <div id="summonRank_data_polo31"></div>
